inventory, bar and button

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,3 +13,12 @@ img {
   width: 200px;
   height: 200px;
 }
+.inventory {
+  width: 50%;
+  top: 0;
+  position: absolute;
+  left: 25%;
+  font-size: 26px;
+  height: 100px;
+  z-index: 99;
+}
