--- a/src/less/index.less
+++ b/src/less/index.less
@@ -19,3 +19,13 @@ img {
 
 .nav-scene {
 }
+
+.inventory {
+  width: 50%;
+  top: 0;
+  position: absolute;
+  left: 25%;
+  font-size: 26px;
+  height: 100px;
+  z-index: 99;
+}
