--- a/src/less/base.less
+++ b/src/less/base.less
@@ -17,6 +17,14 @@
   &.active {
     transform: none;
   }
+
+  .footer {
+    width: 100%;
+    height: 200px;
+    background: #ccc;
+    bottom: 0px;
+    position: absolute;
+  }
 }
 
 img {
