--- a/src/less/navScene.less
+++ b/src/less/navScene.less
@@ -31,13 +31,13 @@
     .scene {
       transform: scale(0.3);
     }
-    .scene.S00 {
+    .scene:nth-child(1) {
       transform-origin: 13% 20%;
     }
-    .scene.S01 {
+    .scene:nth-child(2) {
       transform-origin: 87% 20%;
     }
-    .scene.S02 {
+    .scene:nth-child(3) {
       transform-origin: 50% 75%;
     }
   }
@@ -47,19 +47,19 @@
     .scene {
       transform: scale(0.25);
     }
-    .scene.S00 {
+    .scene:nth-child(1) {
       transform-origin: 25% 13%;
     }
-    .scene.S01 {
+    .scene:nth-child(2) {
       transform-origin: 75% 13%;
     }
-    .scene.S02 {
+    .scene:nth-child(3) {
       transform-origin: 10% 50%;
     }
-    .scene.S03 {
+    .scene:nth-child(4) {
       transform-origin: 50% 50%;
     }
-    .scene.S04 {
+    .scene:nth-child(5) {
       transform-origin: 90% 50%;
     }
   }
