var styling in params

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -50,16 +50,17 @@ img {
   height: 100px;
   z-index: 99;
   border: solid 4px black;
-
-  .variable {
-    background: red;
-    width: 40px;
-    display: inline-block;
-  }
+}
+.variable.number {
+  background: red;
+  width: 50px;
+  height: 50px;
+  display: inline-block;
 }
 
 .parameter {
   width: 50px;
   height: 50px;
   background: blue;
+  display: inline-block;
 }
