--- a/src/less/base.less
+++ b/src/less/base.less
@@ -20,10 +20,15 @@
 
   .footer {
     width: 100%;
-    height: 200px;
+    height: @footerHeight;
     background: #ccc;
     bottom: 0px;
     position: absolute;
+  }
+
+  .avatar {
+    position: absolute;
+    right: 0px;
   }
 }
 
@@ -36,8 +41,8 @@ img {
   margin: 100px auto 0px auto;
   position: relative;
   display: block;
-  width: 1200px;
-  height: 800px;
+  width: @gameWidth;
+  height: @gameHeight;
 }
 
 .inventory {
@@ -49,6 +54,7 @@ img {
   font-size: 26px;
   height: 100px;
   z-index: 99;
+  background: white;
   border: solid 4px black;
 }
 .variable.number {
@@ -56,11 +62,5 @@ img {
   width: 50px;
   height: 50px;
   display: inline-block;
-}
-
-.parameter {
-  width: 50px;
-  height: 50px;
-  background: blue;
-  display: inline-block;
+  margin: 10px;
 }
