--- a/src/less/pillar.less
+++ b/src/less/pillar.less
@@ -27,5 +27,17 @@
     height: 50px;
     background: blue;
     display: inline-block;
+    position: absolute;
+    bottom: 95px;
+    z-index: 20;
+    &:nth-of-type(1) {
+      left: 28px;
+    }
+    &:nth-of-type(2) {
+      left: 78px;
+    }
+    &:nth-of-type(3) {
+      left: 128px;
+    }
   }
 }
