styling rules for colours and numbers should apply to params as well as vars

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -2,3 +2,9 @@
 @gameWidth: 800px;
 
 @footerHeight: 100px;
+
+@numberWidth: 50px;
+@numberHeight: 50px;
+
+@colourWidth: 100px;
+@colourHeight: 30px;
