--- a/src/less/base.less
+++ b/src/less/base.less
@@ -61,17 +61,17 @@ img {
   margin: 10px;
   text-align: center;
   display: inline-block;
-  &.number {
-    border: solid 1px black;
-    // background: red;
-    line-height: 50px;
+}
+.number {
+  border: solid 1px black;
+  // background: red;
+  line-height: 50px;
 
-    width: 50px;
-    height: 50px;
-  }
+  width: @numberWidth;
+  height: @numberHeight;
+}
 
-  &.colour {
-    width: 100px;
-    height: 30px;
-  }
+.colour {
+  width: @colourWidth;
+  height: @colourHeight;
 }
