--- a/src/less/pillar.less
+++ b/src/less/pillar.less
@@ -1,7 +1,19 @@
+@import "variables.less";
+
 .pillar-region {
   bottom: @footerHeight;
   position: absolute;
-  left: 20px;
+
+  &:nth-of-type(1) {
+    left: 20px;
+  }
+  &:nth-of-type(2) {
+    left: calc(@pillarWidth ~"+ 20px");
+  }
+  &:nth-of-type(3) {
+    left: calc(@pillarWidth * ~"2 + 20px");
+  }
+
   img {
     bottom: 0px;
     position: absolute;
