--- a/src/less/pillar.less
+++ b/src/less/pillar.less
@@ -34,20 +34,35 @@
     }
   }
 
-  .parameter {
-    background: blue;
-    display: inline-block;
+  .param-region {
     position: absolute;
-    bottom: 95px;
-    z-index: 20;
-    &:nth-of-type(1) {
-      left: 28px;
+    z-index: 15;
+    bottom: 0;
+    left: 50px;
+  }
+  .param-container {
+    display: block;
+    width: @centralPillarWidth;
+    height: 54px;
+    border: solid 1px #666;
+
+    .label {
+      margin: 2px;
+      position: absolute;
+      z-index: 15;
+      height: 100%;
+      width: 50%;
+      display: inline-block;
+      text-align: center;
     }
-    &:nth-of-type(2) {
-      left: 78px;
-    }
-    &:nth-of-type(3) {
-      left: 128px;
+    .parameter {
+      margin: 2px;
+      background: blue;
+      display: inline-block;
+      position: absolute;
+      bottom: 0px;
+      z-index: 20;
+      right: 0px;
     }
 
     .variable {
