initial styling for labels

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -3,11 +3,12 @@
 
 @footerHeight: 100px;
 
-@numberWidth: 50px;
-@numberHeight: 50px;
+@numberWidth: 40px;
+@numberHeight: 40px;
 
-@colourWidth: 100px;
-@colourHeight: 30px;
+@colourWidth: 80px;
+@colourHeight: 20px;
 
+@pillarHeight: 200px;
 @pillarWidth: 200px;
-@centralPillarWidth: 100px;
+@centralPillarWidth: 120px;
