--- a/src/less/pillar.less
+++ b/src/less/pillar.less
@@ -38,26 +38,34 @@
     position: absolute;
     z-index: 15;
     bottom: 0;
-    left: 50px;
+    left: 40px;
+    height: calc(@pillarHeight ~"- 20px");
   }
   .param-container {
+    margin: 2px;
     display: block;
     width: @centralPillarWidth;
-    height: 54px;
+    height: calc(@numberHeight ~" + 6px");
     border: solid 1px #666;
+    position: relative;
+    background: #999;
 
     .label {
       margin: 2px;
       position: absolute;
       z-index: 15;
+      line-height: @numberHeight;
       height: 100%;
       width: 50%;
       display: inline-block;
       text-align: center;
+      h3 {
+        margin: 0;
+      }
     }
     .parameter {
       margin: 2px;
-      background: blue;
+      background: #333333;
       display: inline-block;
       position: absolute;
       bottom: 0px;
