colour drop wip

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -37,6 +37,11 @@ img {
   height: 200px;
 }
 
+img.colour-drop {
+  width: @numberWidth;
+  height: @numberHeight;
+}
+
 .nav-scene {
   margin: 100px auto 0px auto;
   position: relative;
@@ -72,6 +77,6 @@ img {
 }
 
 .colour {
-  width: @colourWidth;
-  height: @colourHeight;
+  width: @numberWidth;
+  height: @numberHeight;
 }
