drag n drop colourdrop vars

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -69,8 +69,8 @@ img.colour-drop {
 }
 .number {
   border: solid 1px black;
-  // background: red;
-  line-height: 50px;
+  background-color: white;
+  line-height: @numberHeight;
 
   width: @numberWidth;
   height: @numberHeight;
@@ -79,4 +79,6 @@ img.colour-drop {
 .colour {
   width: @numberWidth;
   height: @numberHeight;
+  background-image: url("../img/colourDrop.png");
+  background-size: contain;
 }
