--- a/src/less/pillar.less
+++ b/src/less/pillar.less
@@ -65,7 +65,7 @@
     }
     .parameter {
       margin: 2px;
-      background: #333333;
+      background-color: #333333;
       display: inline-block;
       position: absolute;
       bottom: 0px;
@@ -75,6 +75,7 @@
 
     .variable {
       margin: 0;
+      border: none;
     }
   }
 }
