fixed bg colours for colourDrops

--- a/src/less/pillar.less
+++ b/src/less/pillar.less
@@ -71,6 +71,10 @@
       bottom: 0px;
       z-index: 20;
       right: 0px;
+      &.colour,
+      .colour {
+        background-image: url("../img/colourDropDark.png");
+      }
     }
 
     .variable {
