--- a/src/less/navScene.less
+++ b/src/less/navScene.less
@@ -1,6 +1,8 @@
 .scene.nav-scene {
   .scene {
     cursor: pointer;
+    left: -@sceneBorderWidth;
+    top: -@sceneBorderWidth;
 
     &.active {
       z-index: 9;
