--- a/src/less/navScene.less
+++ b/src/less/navScene.less
@@ -3,6 +3,8 @@
     cursor: pointer;
     left: -@sceneBorderWidth;
     top: -@sceneBorderWidth;
+    transition-timing-function: ease;
+    transition-duration: 1s;
 
     &.active {
       z-index: 9;
