back chevron visible

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -27,6 +27,18 @@
     background: #eee;
     bottom: 0px;
     position: absolute;
+    img.back-chevron {
+      position: absolute;
+      display: none;
+      width: 25%;
+      height: @footerHeight;
+      opacity: 0.2;
+      transition: opacity 0.3s;
+      left: 37.5%;
+    }
+    &:hover img.back-chevron {
+      opacity: 0.45;
+    }
   }
 
   .avatar {
