square size change animates now

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -98,3 +98,7 @@ img.colour-drop {
   background-image: url("../img/colourDrop.png");
   background-size: contain;
 }
+
+img.square {
+  transition: all 1s 0s ease;
+}
