--- a/src/less/base.less
+++ b/src/less/base.less
@@ -76,6 +76,8 @@ img.colour-drop {
   z-index: 99;
   background: white;
   border: solid 4px black;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 .variable {
   vertical-align: top;
