--- a/src/less/base.less
+++ b/src/less/base.less
@@ -79,17 +79,25 @@ img.colour-drop {
   left: 25%;
   font-size: 26px;
   height: @inventoryHeight;
-  z-index: 99;
   background: white;
   border: solid 4px black;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  transition: top 1s 0s ease;
-  top: 0px;
+  transition: top 0.8s 0s ease;
+  z-index: -1;
+  top: -@inventoryHeight;
 
-  &.hidden {
-    z-index: -1;
-    top: -@inventoryHeight;
+  .variable {
+    opacity: 0;
+    transition: opacity 0.5s 1s ease;
+  }
+
+  &.visible {
+    z-index: 99;
+    top: 0px;
+    .variable {
+      opacity: 1;
+    }
   }
 }
 .variable {
