--- a/src/less/pillar.less
+++ b/src/less/pillar.less
@@ -29,8 +29,13 @@
     border: solid 1px black;
     border-radius: 4px;
     background: #ddd;
+    transition: bottom 1s;
     h2 {
       margin: 0;
+    }
+    &.pressed {
+      bottom: 155px;
+      pointer-events: none;
     }
   }
 
