--- a/src/less/pillar.less
+++ b/src/less/pillar.less
@@ -29,13 +29,18 @@
     border: solid 1px black;
     border-radius: 4px;
     background: #ddd;
-    transition: bottom 0.7s;
+    transition: bottom 0.7s, background-color 0.2s;
+
     h2 {
       margin: 0;
     }
     &.pressed {
       bottom: 155px;
       pointer-events: none;
+    }
+    &.fail-pressed {
+      bottom: 190px;
+      background: #f03d3d;
     }
   }
 
