missing params flash now

--- a/src/less/pillar.less
+++ b/src/less/pillar.less
@@ -85,6 +85,10 @@
       .colour {
         background-image: url("../img/colourDropDark.png");
       }
+
+      &.missing {
+        border-color: red;
+      }
     }
 
     .variable {
