font change + todo + new img for square

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -1,5 +1,8 @@
 @import "variables.less";
 
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
 .App {
   height: @gameHeight;
   width: calc(@gameWidth ~"+ 24px");
