new file for scene1 styles - initial textbox stylign

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -11,6 +11,12 @@
   position: relative;
   //   margin-top: 100px;
 }
+
+.text-box {
+  position: absolute;
+  display: block;
+}
+
 .scene {
   position: absolute;
   display: inline-block;
