--- a/src/less/inventory.less
+++ b/src/less/inventory.less
@@ -46,3 +46,8 @@
   background-image: url("../img/colourDrop.png");
   background-size: contain;
 }
+
+img.colour-drop {
+  width: @numberWidth;
+  height: @numberHeight;
+}
