--- a/src/less/scene1.less
+++ b/src/less/scene1.less
@@ -1,11 +1,14 @@
 .scene.nav-scene.active {
   .scene:nth-child(1) {
     .text-box {
-      border: solid 1px blue;
-
       width: 50%;
-      top: 20%;
+      top: 12%;
       left: 25%;
+      border-color: aquamarine;
+      background: aquamarine;
+      &:after {
+        border-left-color: aquamarine;
+      }
     }
   }
 }
