--- a/src/less/navScene.less
+++ b/src/less/navScene.less
@@ -1,6 +1,12 @@
 @import "variables.less";
 
 .scene.nav-scene {
+  margin: 0px auto 0px auto;
+  position: absolute;
+  display: block;
+  width: @gameWidth;
+  height: @gameHeight;
+
   .scene {
     cursor: pointer;
     left: -@sceneBorderWidth;
