tweek speech bubble tail style. added text to scene 2 w/ styling

--- a/src/less/textBoxes.less
+++ b/src/less/textBoxes.less
@@ -11,4 +11,17 @@
       }
     }
   }
+
+  .scene:nth-child(2) {
+    .text-box {
+      width: 50%;
+      top: 12%;
+      left: 25%;
+      border-color: aquamarine;
+      background: aquamarine;
+      &:after {
+        border-left-color: aquamarine;
+      }
+    }
+  }
 }
