css reset + adjust styles to account

--- a/src/less/textBoxes.less
+++ b/src/less/textBoxes.less
@@ -17,10 +17,10 @@
       width: 50%;
       top: 12%;
       left: 25%;
-      border-color: aquamarine;
-      background: aquamarine;
+      border-color: deeppink;
+      background: deeppink;
       &:after {
-        border-left-color: aquamarine;
+        border-left-color: deeppink;
       }
     }
   }
