--- a/src/less/base.less
+++ b/src/less/base.less
@@ -1,15 +1,23 @@
 @import "variables.less";
 
-* {
-  font-family: Arial, Helvetica, sans-serif;
-}
 .App {
   height: @gameHeight;
   width: calc(@gameWidth ~"+ 24px");
   margin: 100px auto 0px auto;
   overflow: hidden;
   position: relative;
-  //   margin-top: 100px;
+  * {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  h2 {
+    font-size: 26px;
+    font-weight: bold;
+  }
+  h3 {
+    margin: 12px 0 12px 0;
+    font-weight: 20px;
+  }
 }
 
 .text-box {
@@ -17,6 +25,10 @@
   display: block;
   border: solid 3px black;
   border-radius: 10px;
+  padding: 16px;
+  h2 {
+    margin-top: 0px;
+  }
 
   &:after {
     content: "";
