--- a/src/less/textBoxes.less
+++ b/src/less/textBoxes.less
@@ -2,21 +2,25 @@
   .scene:nth-child(1) {
     .text-box {
       width: 50%;
-      top: 12%;
-      left: 25%;
+      top: 17%;
+      left: 15%;
       border-color: aquamarine;
       background: aquamarine;
       &:after {
         border-left-color: aquamarine;
+      }
+      em {
+        color: rgb(151, 21, 21);
+        font-weight: bold;
       }
     }
   }
 
   .scene:nth-child(2) {
     .text-box {
-      width: 50%;
-      top: 12%;
-      left: 25%;
+      width: 40%;
+      top: 41%;
+      left: 44%;
       border-color: deeppink;
       background: deeppink;
       &:after {
