text boxes animate in as you visit scene

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -21,6 +21,8 @@
 }
 
 .text-box {
+  opacity: 0; //animates in to active scenes
+  transition: opacity 1s;
   position: absolute;
   display: block;
   border: solid 3px black;
