--- a/src/less/navScene.less
+++ b/src/less/navScene.less
@@ -18,6 +18,9 @@
       z-index: 9;
       transform: none !important;
 
+      .text-box {
+        opacity: 1;
+      }
       .footer img.back-chevron {
         display: block;
       }
