text boxs correctly placed for different size of the square

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -22,7 +22,7 @@
 
 .text-box {
   opacity: 0; //animates in to active scenes
-  transition: opacity 1s;
+  transition: opacity 1s 0.7s;
   position: absolute;
   display: block;
   border: solid 3px black;
