--- a/src/less/scene.less
+++ b/src/less/scene.less
@@ -1,3 +1,5 @@
+@import "variables.less";
+
 .scene {
   position: absolute;
   display: inline-block;
@@ -41,5 +43,9 @@
     position: absolute;
     bottom: 200px;
     right: 30px;
+    width: 33%;
+    img {
+      display: block;
+    }
   }
 }
