--- a/src/less/textBoxes.less
+++ b/src/less/textBoxes.less
@@ -1,4 +1,5 @@
 .scene.nav-scene.active {
+  //Scene 1
   .scene:nth-child(1) {
     .text-box {
       width: 50%;
@@ -16,6 +17,7 @@
     }
   }
 
+  //Scene 2
   .scene:nth-child(2) {
     .text-box {
       border-color: deeppink;
@@ -32,8 +34,42 @@
 
       &.d2 {
         width: 50%;
-        top: 17%;
-        left: 15%;
+        &.size1 {
+          top: 28%;
+          left: 10%;
+        }
+        &.size2 {
+          top: 27%;
+          left: 9%;
+        }
+        &.size3 {
+          top: 25%;
+          left: 8%;
+        }
+        &.size4 {
+          top: 22%;
+          left: 7%;
+        }
+        &.size5 {
+          top: 20%;
+          left: 6%;
+        }
+        &.size6 {
+          top: 16%;
+          left: 5%;
+        }
+        &.size7 {
+          top: 13%;
+          left: 4%;
+        }
+        &.size8 {
+          left: 3%;
+          top: 10%;
+        }
+        &.size9 {
+          top: 10%;
+          left: 2%;
+        }
       }
     }
   }
