correctly positions initial textbox for scene2

--- a/src/less/textBoxes.less
+++ b/src/less/textBoxes.less
@@ -28,8 +28,20 @@
 
       &.d1 {
         width: 40%;
-        top: 41%;
-        left: 44%;
+        top: 36%;
+        left: 50%;
+        &:after {
+          top: unset;
+          bottom: 0;
+          left: 67%;
+          width: 0;
+          height: 0;
+          border: 20px solid transparent;
+          border-top-color: deeppink;
+          border-bottom: 0;
+          margin-left: -20px;
+          margin-bottom: -20px;
+        }
       }
 
       &.d2 {
