animation polish for textbox trnsition

--- a/src/less/textBoxes.less
+++ b/src/less/textBoxes.less
@@ -45,7 +45,7 @@
       }
 
       &.d2 {
-        transition: left 1s, top 1s;
+        transition: left 1s, top 1s, opacity 1s 1.4s;
         width: 50%;
         &.size1 {
           top: 28%;
