--- a/src/less/navScene.less
+++ b/src/less/navScene.less
@@ -20,6 +20,9 @@
 
       .text-box {
         opacity: 1;
+        &.hidden {
+          opacity: 0;
+        }
       }
       .footer img.back-chevron {
         display: block;
