added param-hitbox to make it easier to drop variables

--- a/src/less/pillar.less
+++ b/src/less/pillar.less
@@ -91,6 +91,14 @@
         border-color: #c53c3c;
         box-shadow: inset 0 0 0 2px #c53c3c;
       }
+
+      .param-hitbox {
+        position: absolute;
+        width: 200%;
+        height: 200%;
+        left: -50%;
+        top: -50%;
+      }
     }
 
     .variable {
