--- a/src/less/base.less
+++ b/src/less/base.less
@@ -20,6 +20,10 @@
   }
 }
 
+em {
+  font-weight: bold;
+}
+
 .text-box {
   opacity: 0; //animates in to active scenes
   transition: opacity 1s 0.7s;
