--- a/src/less/textBoxes.less
+++ b/src/less/textBoxes.less
@@ -28,7 +28,7 @@
 
       &.d1 {
         width: 40%;
-        top: 36%;
+        bottom: 43%;
         left: 50%;
         &:after {
           top: unset;
