--- a/src/less/pillar.less
+++ b/src/less/pillar.less
@@ -4,6 +4,10 @@
   bottom: @footerHeight;
   position: absolute;
 
+  img {
+    width: 200px;
+    height: 200px;
+  }
   &:nth-of-type(1) {
     left: 20px;
   }
