update dialog 3 box for paintbrush scene

--- a/src/less/textBoxes.less
+++ b/src/less/textBoxes.less
@@ -108,6 +108,11 @@
         left: 19%;
         bottom: 71%;
       }
+      &.d3 {
+        width: 35%;
+        left: 35%;
+        bottom: 71%;
+      }
     }
   } //END SCENE 3
 }
