more work on inter-room navigation

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -1,6 +1,6 @@
 @import "variables.less";
 
-.App {
+.Game {
   height: calc(@gameHeight ~"+ 24px");
   width: calc(@gameWidth ~"+ 24px");
   margin: 100px auto 20px auto;
