working?? nav incl. rooms +  a scene

--- a/src/less/scene.less
+++ b/src/less/scene.less
@@ -17,6 +17,10 @@
   &.active {
     transform: none;
   }
+  &.hidden {
+    opacity: 0;
+    z-index: -1 !important;
+  }
 
   .avatar {
     position: absolute;
