--- a/src/less/navScene.less
+++ b/src/less/navScene.less
@@ -24,8 +24,11 @@
           opacity: 0;
         }
       }
-      .footer img.back-chevron {
-        display: block;
+      .footer {
+        z-index: 10;
+        img.back-chevron {
+          display: block;
+        }
       }
     }
   }
