more wip - have moved inner footer up to make it independently clickable

--- a/src/less/navScene.less
+++ b/src/less/navScene.less
@@ -27,6 +27,7 @@
 
       .nav-scene .scene.active .footer {
         z-index: 15;
+        bottom: 60px;
       }
       .footer {
         z-index: 10;
