its coming together

--- a/src/less/scene.less
+++ b/src/less/scene.less
@@ -11,6 +11,11 @@
 
   width: @gameWidth;
   height: @gameHeight;
+  cursor: pointer;
+  left: -@sceneBorderWidth;
+  top: -@sceneBorderWidth;
+  transition-timing-function: ease;
+  transition-duration: 1s;
 
   //   overflow: hidden;
 
