--- a/src/less/navScene.less
+++ b/src/less/navScene.less
@@ -1,19 +1,43 @@
 @import "variables.less";
 
 .nav-scene {
+  border-radius: 20px;
+  border: double @sceneBorderWidth black;
+
+  left: 0;
+  top: 0;
+
   margin: 0px auto 0px auto;
   position: absolute;
   display: block;
   width: @gameWidth;
   height: @gameHeight;
 
-  .scene {
-    cursor: pointer;
+  .nav-scene {
     left: -@sceneBorderWidth;
     top: -@sceneBorderWidth;
-    transition-timing-function: ease;
-    transition-duration: 1s;
+  }
 
+  .room {
+    > img.preview {
+      width: 100%;
+      height: 100%;
+      opacity: 1;
+    }
+    .nav-scene {
+      opacity: 0;
+    }
+    &.active {
+      > img.preview {
+        opacity: 0;
+      }
+      .nav-scene {
+        opacity: 1;
+      }
+    }
+  }
+
+  .scene {
     &.active {
       z-index: 9;
       transform: none !important;
