--- a/src/less/navScene.less
+++ b/src/less/navScene.less
@@ -1,6 +1,6 @@
 @import "variables.less";
 
-.nav-scene {
+.nav {
   border-radius: 20px;
   border: double @sceneBorderWidth black;
 
@@ -13,7 +13,7 @@
   width: @gameWidth;
   height: @gameHeight;
 
-  .nav-scene {
+  .nav {
     left: -@sceneBorderWidth;
     top: -@sceneBorderWidth;
   }
@@ -23,21 +23,23 @@
       width: 100%;
       height: 100%;
       opacity: 1;
+      transition: opacity 0.5s;
     }
-    .nav-scene {
+    .nav {
       opacity: 0;
+      transition: opacity 0.5s;
     }
     &.active {
       > img.preview {
         opacity: 0;
       }
-      .nav-scene {
+      .nav {
         opacity: 1;
       }
     }
   }
 
-  .scene {
+  > .scene {
     &.active {
       z-index: 9;
       transform: none !important;
@@ -49,7 +51,7 @@
         }
       }
 
-      .nav-scene .scene.active .footer {
+      .nav .scene.active .footer {
         z-index: 15;
         bottom: 60px;
       }
