finally working lol

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,6 +1,7 @@
 @import "reset.less";
 @import "base.less";
-@import "navScene.less";
+@import "nav.less";
+@import "room.less";
 @import "pillar.less";
 @import "inventory.less";
 @import "scene.less";
