--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -14,29 +14,9 @@
   height: @gameHeight;
 
   .nav {
+    // send layer
     left: -@sceneBorderWidth;
     top: -@sceneBorderWidth;
-  }
-
-  .room {
-    > img.preview {
-      width: 100%;
-      height: 100%;
-      opacity: 1;
-      transition: opacity 0.5s;
-    }
-    .nav {
-      opacity: 0;
-      transition: opacity 0.5s;
-    }
-    &.active {
-      > img.preview {
-        opacity: 0;
-      }
-      .nav {
-        opacity: 1;
-      }
-    }
   }
 
   > .scene {
@@ -48,17 +28,6 @@
         opacity: 1;
         &.hidden {
           opacity: 0;
-        }
-      }
-
-      .nav .scene.active .footer {
-        z-index: 15;
-        bottom: 60px;
-      }
-      .footer {
-        z-index: 10;
-        img.back-chevron {
-          display: block;
         }
       }
     }
