fix inv position bug

--- a/src/less/inventory.less
+++ b/src/less/inventory.less
@@ -12,7 +12,7 @@
   border-bottom-right-radius: 10px;
   transition: top 0.8s 0s ease;
   z-index: -1;
-  top: -@inventoryHeight;
+  top: calc(-@inventoryHeight ~"- 4px");
 
   .variable {
     opacity: 0;
