--- a/src/less/textBoxes.less
+++ b/src/less/textBoxes.less
@@ -3,8 +3,8 @@
   .scene:nth-child(1) {
     .text-box {
       width: 50%;
-      top: 17%;
-      left: 15%;
+      bottom: 66%;
+      left: 10%;
       border-color: aquamarine;
       background: aquamarine;
       &:after {
@@ -27,6 +27,7 @@
       }
 
       &.d1 {
+        top: unset;
         width: 40%;
         bottom: 43%;
         left: 50%;
