styled string variables

--- a/src/less/inventory.less
+++ b/src/less/inventory.less
@@ -49,6 +49,16 @@
   background-size: contain;
 }
 
+.string {
+  padding: 2px;
+  border: solid 1px black;
+  vertical-align: center;
+  line-height: 20px;
+  font-size: 16px;
+  width: 80px;
+  height: calc(@numberHeight ~"/ 2");
+}
+
 img.colour-drop {
   width: @numberWidth;
   height: @numberHeight;
