styling to fit string variables into params

--- a/src/less/inventory.less
+++ b/src/less/inventory.less
@@ -50,9 +50,10 @@
 }
 
 .string {
+  background-color: white;
   padding: 2px;
   border: solid 1px black;
-  vertical-align: center;
+  vertical-align: middle;
   line-height: 20px;
   font-size: 16px;
   width: 80px;
