--- a/src/less/pillar.less
+++ b/src/less/pillar.less
@@ -103,6 +103,10 @@
         left: -50%;
         top: -50%;
       }
+      .string {
+        top: 0px;
+        left: 0px;
+      }
     }
 
     .variable {
