--- a/src/less/pillar.less
+++ b/src/less/pillar.less
@@ -54,12 +54,21 @@
     bottom: 0;
     left: 40px;
     height: calc(@pillarHeight ~"- 20px");
+    .label {
+      h3 {
+        font-size: 18px;
+      }
+      &.string {
+        line-height: 28px;
+        padding-left: 6px;
+      }
+    }
   }
   .param-container {
     margin: 2px;
     display: block;
     width: @centralPillarWidth;
-    height: calc(@numberHeight ~" + 6px");
+    height: calc(@numberHeight ~" + 16px");
     border: solid 1px #666;
     position: relative;
     background: #999;
@@ -68,7 +77,7 @@
       margin: 2px;
       position: absolute;
       z-index: 15;
-      line-height: @numberHeight;
+      line-height: calc(@numberHeight ~" + 16px");
       height: 100%;
       width: 50%;
       display: inline-block;
@@ -76,15 +85,22 @@
       h3 {
         margin: 0;
       }
+      &.string {
+        margin: 0;
+        height: 50%;
+        width: 100%;
+        line-height: 100%;
+        text-align: left;
+      }
     }
     .parameter {
       margin: 2px;
       background-color: #333333;
       display: inline-block;
       position: absolute;
-      bottom: 0px;
+      bottom: 6px;
       z-index: 20;
-      right: 0px;
+      right: 4px;
       transition: box-shadow 0.2s;
       &.colour,
       .colour {
@@ -103,9 +119,14 @@
         left: -50%;
         top: -50%;
       }
-      .string {
-        top: 0px;
-        left: 0px;
+      &.string {
+        bottom: 0px;
+        right: 0px;
+        .string {
+          position: absolute;
+          top: 0px;
+          left: 0px;
+        }
       }
     }
 
