tidy up CSS a lot

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -3,6 +3,8 @@
 @import "nav.less";
 @import "room.less";
 @import "pillar.less";
+@import "parameter.less";
 @import "inventory.less";
+@import "items.less";
 @import "scene.less";
 @import "textBoxes.less";
