fixed parameter slot for colours

--- a/src/less/inventory.less
+++ b/src/less/inventory.less
@@ -33,20 +33,11 @@
   }
 }
 
-.number {
+.number,
+.colour {
   line-height: @numberHeight;
   width: @numberWidth;
   height: @numberHeight;
-}
-
-.colour {
-  width: @numberWidth;
-  height: @numberHeight;
-  &.variable,
-  &.parameter {
-    background-image: url("../img/colourDrop.png");
-    background-size: contain;
-  }
 }
 
 .string {
