--- a/src/less/parameter.less
+++ b/src/less/parameter.less
@@ -61,6 +61,7 @@
     &.colour,
     .colour {
       background-image: url("../img/colourDropDark.png");
+      background-size: contain;
     }
     &.string {
       bottom: 0px;
