--- a/src/less/pillar.less
+++ b/src/less/pillar.less
@@ -4,7 +4,7 @@
   bottom: @footerHeight;
   position: absolute;
 
-  img {
+  img.postbox {
     width: 200px;
     height: 200px;
     bottom: 0px;
