fixed shrunk textbox

--- a/src/less/textBoxes.less
+++ b/src/less/textBoxes.less
@@ -46,6 +46,7 @@
       }
 
       &.d2 {
+        bottom: unset;
         transition: left 1s, top 1s, opacity 1s 2.3s;
         width: 50%;
         &.size1 {
