--- a/src/less/scene.less
+++ b/src/less/scene.less
@@ -39,6 +39,14 @@
     margin: 0 auto;
     display: block;
   }
+
+  &.av-door {
+    bottom: @footerHeight;
+    right: 100px;
+    img.door {
+      width: 300px;
+    }
+  }
 }
 
 .footer {
