something resembling a dial with css transforms

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -2,6 +2,7 @@
 @import "base.less";
 @import "nav.less";
 @import "room.less";
+@import "dial.less";
 @import "pillar.less";
 @import "parameter.less";
 @import "inventory.less";
