--- a/src/less/dial.less
+++ b/src/less/dial.less
@@ -9,6 +9,10 @@
     width: 100px;
     transform-origin: 50% 50% 100px;
     height: 100px;
+    color: white;
+    font-size: 28px;
+    text-align: center;
+    line-height: 100px;
   }
 
   .face-current {
@@ -24,5 +28,9 @@
   .face-next {
     transform: rotateY(40deg) translateX(68px);
     background: blue;
+  }
+
+  .hidden {
+    display: none;
   }
 }
