--- a/src/less/base.less
+++ b/src/less/base.less
@@ -28,7 +28,8 @@ em {
   opacity: 0; //animates in to active scenes
   transition: opacity 1s 0.7s;
   position: absolute;
-  display: block;
+  // display: block;
+  display: none;
   border: solid 3px black;
   border-radius: 10px;
   padding: 16px;
