--- a/src/less/dial.less
+++ b/src/less/dial.less
@@ -6,38 +6,53 @@
   width: 40px;
   text-align: center;
 }
+.dial-container {
+  position: absolute;
+  top: 100px;
+  left: 100px;
+}
 
 .dial {
   display: inline-block;
   width: 300px;
   height: @dialHeight;
-  perspective: 500px;
+  perspective: 1000px;
 
   .face {
-    transition: all 0.5s;
+    transition: transform 0.5s;
+    position: absolute;
     display: inline-block;
-    width: 100px;
-    transform-origin: 50% 50% 100px;
+    width: 80px;
     height: @dialHeight;
     color: white;
     font-size: 28px;
     text-align: center;
     line-height: @dialHeight;
+    // border: solid 1px black;
+    background: black;
   }
 
   .face-current {
     transform: none;
-    background: purple;
+    z-index: 50;
   }
 
   .face-prev {
+    z-index: 45;
     // transform: rotate3d(0, 1, 0, 30deg);
-    transform: rotateY(-40deg) translateX(-68px);
-    background: green;
+    transform: translateX(-58px) rotateY(-55deg);
   }
   .face-next {
-    transform: rotateY(40deg) translateX(68px);
-    background: blue;
+    z-index: 45;
+    transform: translateX(58px) rotateY(55deg);
+  }
+  .face-far-left {
+    z-index: 40;
+    transform: translateX(-76px) rotateY(-78deg);
+  }
+  .face-far-right {
+    z-index: 40;
+    transform: translateX(76px) rotateY(78deg);
   }
 
   .hidden {
