--- a/src/less/pillar.less
+++ b/src/less/pillar.less
@@ -1,8 +1,18 @@
 @import "variables.less";
 
-.pillar-region {
+.pillars-region {
   bottom: @footerHeight;
   position: absolute;
+  height: @pillarHeight;
+  left: 20px;
+}
+
+.pillar-container {
+  bottom: 0;
+  position: relative;
+  display: inline-block;
+  width: @pillarWidth;
+  height: @pillarHeight;
 
   img.postbox {
     width: 200px;
@@ -11,15 +21,15 @@
     position: absolute;
     z-index: 5;
   }
-  &:nth-of-type(1) {
-    left: 20px;
-  }
-  &:nth-of-type(2) {
-    left: calc(@pillarWidth ~"+ 20px");
-  }
-  &:nth-of-type(3) {
-    left: calc(@pillarWidth * ~"2 + 20px");
-  }
+  // &:nth-of-type(1) {
+  //   left: 20px;
+  // }
+  // &:nth-of-type(2) {
+  //   left: calc(@pillarWidth ~"+ 20px");
+  // }
+  // &:nth-of-type(3) {
+  //   left: calc(@pillarWidth * ~"2 + 20px");
+  // }
 
   .button {
     text-align: center;
