--- a/src/less/dial.less
+++ b/src/less/dial.less
@@ -10,8 +10,9 @@
 }
 .dial-container {
   position: absolute;
-  top: 100px;
-  left: 100px;
+  z-index: 10;
+  top: 40px;
+  left: 5px;
 }
 
 .dial {
