--- a/src/less/base.less
+++ b/src/less/base.less
@@ -28,8 +28,7 @@ em {
   opacity: 0; //animates in to active scenes
   transition: opacity 1s 0.7s;
   position: absolute;
-  // display: block;
-  display: none;
+  display: block;
   border: solid 3px black;
   border-radius: 10px;
   padding: 16px;
