--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -41,40 +41,56 @@
   }
 
   &.c1 {
-    .scene {
+    > .scene {
       transform: scale(0.5);
       transform-origin: 50% 50%;
     }
   }
 
   &.c2 {
-    .scene {
+    > .scene {
       transform: scale(0.4);
     }
-    .scene:nth-child(1) {
+    > .scene:nth-child(1) {
       transform-origin: 13% 50%;
     }
-    .scene:nth-child(2) {
+    > .scene:nth-child(2) {
       transform-origin: 87% 50%;
     }
   }
 
   &.c3 {
-    .scene {
+    > .scene {
       transform: scale(0.3);
     }
-    .scene:nth-child(1) {
+    > .scene:nth-child(1) {
       transform-origin: 13% 20%;
     }
-    .scene:nth-child(2) {
+    > .scene:nth-child(2) {
       transform-origin: 87% 20%;
     }
-    .scene:nth-child(3) {
+    > .scene:nth-child(3) {
       transform-origin: 50% 75%;
     }
   }
 
-  &.c4,
+  &.c4 {
+    > .scene {
+      transform: scale(0.3);
+    }
+    > .scene:nth-child(1) {
+      transform-origin: 13% 20%;
+    }
+    > .scene:nth-child(2) {
+      transform-origin: 87% 20%;
+    }
+    > .scene:nth-child(3) {
+      transform-origin: 13% 75%;
+    }
+    .scene:nth-child(4) {
+      transform-origin: 87% 75%;
+    }
+  }
   &.c5 {
     .scene {
       transform: scale(0.25);
